--- a/artigos_da_pag.html
+++ b/artigos_da_pag.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Integrando Conhecimento</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="geral.css">
     <link rel="icon" href="imagens-do-site/oculos-geek-logo-do-app.png">
     <link rel="stylesheet" href="artigos.css">
