--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Integrando Conhecimento</title>
     <link rel="stylesheet" href="geral.css">
     <link rel="icon" href="imagens-do-site/oculos-geek-logo-do-app.png">
